name:           HaskellSandbox
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Krzysztof Langner

executable HaskellSandbox
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                  base >= 4,
                  containers >=0.5.0 && <0.6
  ghc-options:     -Wall
  other-modules:   
                   Pearls.SFN,
                   Algo004.Sorting,
                   Anthill.Script,
                   DES.LogicGates

